# ytrs

./: Cargo.toml  README.md  rustypipe_cache.json
mpv-ipc/: Cargo.toml
mpv-ipc/src/: lib.rs
src/: app.rs  cli.rs  main.rs  mpv.rs  utility.rs
