[package]
name = "ytrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
inquire = "0.7.5"
mpv-ipc = { path = "mpv-ipc" }
ratatui = "0.30.0"
rustypipe = "0.11.3"
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
yt-dlp = "1.4.9"
ratatui-image = { version = "10.0.4", features = ["crossterm", "image-defaults"], default-features = false }
reqwest = "0.13.1"
image = "0.25.9"
ratatui-macros = "0.7.0"
strum = "0.27.2"
chrono = "0.4.43"
terminal-clipboard = "0.4"
thiserror = "2.0.18"
ollama-rs = { version = "0.3.3", features = ["stream"] }
tokio-stream = "0.1.18"
