[package]
name = "ytrs"
version = "0.1.31"
edition = "2024"
include = [
  "src/**/*",
  "Cargo.toml",
  "README.md",
  "LICENSE",
]
license = "GPL-3.0"
homepage = "https://github.com/Owlyat/ytrs"
description = "A crossplatform Youtube TUI to download/watch/listen videos/music/transcript using MPV/YT-DLP/ffmpeg/Rustypipe"
repository = "https://github.com/Owlyat/ytrs"
keywords = [
  "tui",
  "youtube",
  "terminal",
]

[dependencies]
anyhow = "1.0"
inquire = "0.9"
ratatui = "0.30"
rustypipe = "0.11"
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
yt-dlp = "1.4.9"
ratatui-image = { version = "10.0.4", features = ["crossterm", "image-defaults"], default-features = false }
reqwest = "0.13.1"
image = "0.25.9"
ratatui-macros = "0.7.0"
strum = "0.27"
chrono = "0.4"
terminal-clipboard = "0.4"
thiserror = "2.0"
ollama-rs = { version = "0.3", features = ["stream"] }
tokio-stream = "0.1"
serde = "1.0"
tokio-util = "0.7"
unix-timestamp = "0.1"
inquire-derive = "0.9"
clap = { version = "4.5", features = ["derive"] }
lofty = "0.23"
